test/snapshots/wipple_test__custom-errors-formatting.test.wipple.snap
---
source: test/src/lib.rs
assertion_line: 187
expression: snapshot
---
diagnostics:
  - location:
      path: tests/custom-errors-formatting.test.wipple
      start:
        line: 9
        column: 43
        index: 158
      end:
        line: 9
        column: 53
        index: 168
    severity: error
    message: "Couldn't find `Error-Data`"
    description: Double-check your code for spelling mistakes.
  - location:
      path: tests/custom-errors-formatting.test.wipple
      start:
        line: 9
        column: 72
        index: 187
      end:
        line: 9
        column: 82
        index: 197
    severity: error
    message: "Couldn't find `Error-Data`"
    description: Double-check your code for spelling mistakes.
  - location:
      path: tests/custom-errors-formatting.test.wipple
      start:
        line: 19
        column: 0
        index: 465
      end:
        line: 19
        column: 4
        index: 469
    severity: error
    message: does-not-eat
    description: ~
  - location:
      path: tests/custom-errors-formatting.test.wipple
      start:
        line: 20
        column: 0
        index: 487
      end:
        line: 20
        column: 4
        index: 491
    severity: error
    message: does-not-eat
    description: ~
output: []
