test/snapshots/wipple_test__custom-errors.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics:
  - location:
      path: tests/custom-errors.test.wipple
      start:
        line: 14
        column: 0
        index: 325
      end:
        line: 14
        column: 7
        index: 332
    severity: error
    template:
      id: missing-pixels
      data: {}
output: []
