test/snapshots/wipple_test__default-instance.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
using default instance
using specific instance: Hello, world!
