test/snapshots/wipple_test__destructuring.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics: []
output:
  - Alice
  - Bob
  - Charlie
