test/snapshots/wipple_test__dictionary.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics: []
output:
  - Basketball has 10 letters
  - Soccer has 6 letters
  - Golf has 4 letters
