test/snapshots/wipple_test__divisible-by.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics: []
output:
  - "True"
  - "False"
  - "False"
  - "True"
