test/snapshots/wipple_test__enumerate.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics: []
output:
  - "0: a"
  - "1: b"
  - "2: c"
