test/snapshots/wipple_test__equal-type.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics:
  - "tests/equal-type.test.wipple:16:10: error: try putting `valid` before this number"
output: []
