test/snapshots/wipple_test__exhaustiveness-checking.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics:
  - "tests/exhaustiveness-checking.test.wipple:12:24: error: this code doesn't handle <unknown> or <unknown>"
output: []
