test/snapshots/wipple_test__function-arrow.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics:
  - "tests/function-arrow.test.wipple:3:2: error: expected code after this `->`"
  - "tests/function-arrow.test.wipple:3:2: error: expected pattern before this `->`"
  - "tests/function-arrow.test.wipple:4:4: error: expected code after this `->`"
  - "tests/function-arrow.test.wipple:5:2: error: expected pattern before this `->`"
output: []
