test/snapshots/wipple_test__greet.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics: []
output:
  - "Hello, Bob!"
  - "Hello, world!"
